--- a/app/src/main/res/layout/adapter_homepager.xml
+++ b/app/src/main/res/layout/adapter_homepager.xml
@@ -1,3 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container" android:layout_height="match_parent" android:layout_width="match_parent" tools:context="com.chgocn.gankio.mvp.homepager.view.adapter.HomePagerListAdapter"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.chgocn.gankio.mvp.homepager.view.adapter.HomePagerListAdapter" />
 
