--- a/lib/src/main/res/layout/tabwidget.xml
+++ b/lib/src/main/res/layout/tabwidget.xml
@@ -3,7 +3,7 @@
 				android:id="@+id/root_tab_widget"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:background="@drawable/bg_tab_selector"
+				android:background="?android:attr/selectableItemBackground"
 				android:padding="5dp">
 
 	<RelativeLayout
