--- a/lib/src/main/res/values/styles.xml
+++ b/lib/src/main/res/values/styles.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!--base style-->
     <style name="Global">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
@@ -12,6 +14,8 @@
         <item name="android:orientation">vertical</item>
     </style>
 
+
+    <!--spinner-->
     <style name="Spinner">
         <item name="android:indeterminate">true</item>
         <item name="android:indeterminateDrawable">@drawable/spinner</item>
@@ -24,11 +28,16 @@
         <item name="android:layout_height">64dp</item>
     </style>
 
-    <style name="ListView">
-        <item name="android:dividerHeight">0dp</item>
-        <item name="android:divider">@null</item>
-        <item name="android:cacheColorHint">@android:color/transparent</item>
-        <item name="android:fadingEdge">none</item>
+
+    <!--title-->
+    <style name="TitleText">
+        <item name="android:textSize">17sp</item>
+        <item name="android:paddingBottom">2dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:maxLines">1</item>
     </style>
 
     <style name="SubtitleText">
@@ -38,6 +47,41 @@
         <item name="android:layout_width">wrap_content</item>
     </style>
 
-    <style name="ListSubtitleText" parent="SubtitleText"/>
+    <style name="ListTitleText" parent="TitleText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="ListContentText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:paddingBottom">2dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+
+    <style name="ListSubtitleText" parent="SubtitleText" />
+
+    <!--list-->
+    <style name="ListView">
+        <item name="android:dividerHeight">0dp</item>
+        <item name="android:divider">@null</item>
+        <item name="android:cacheColorHint">@android:color/transparent</item>
+        <item name="android:fadingEdge">none</item>
+    </style>
+
+    <style name="ListItem">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+    </style>
+
+    <style name="ListItemFrame" parent="ListItem">
+        <item name="android:background">@null</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+    </style>
 
 </resources>
