--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
@@ -7,8 +8,10 @@
     android:orientation="vertical"
     tools:context="com.chgocn.gankio.mvp.personal.PersonalFragment">
 
+    <include layout="@layout/item_header_banner" />
+
     <RelativeLayout
-        android:id="@+id/rl_item"
+        android:id="@+id/rl_avatar"
         style="@style/ListItem">
 
         <ImageView
