提取IT之家阴影图片，添加tab栏阴影特效

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,9 @@
         <item name="actionBarPopupTheme">@style/ThemeOverlay.AppCompat.Dark</item>
 
     </style>
+
+    <style name="AppTheme.Primary" parent="@style/AppTheme">
+        <item name="android:windowBackground">@color/win_bg</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
 </resources>
