--- a/app/src/main/res/layout/fragment_homepager.xml
+++ b/app/src/main/res/layout/fragment_homepager.xml
@@ -7,8 +7,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white_color"/>
+        android:layout_height="match_parent" />
 
 </android.support.v4.widget.SwipeRefreshLayout>
 
