--- a/lib/src/main/res/layout/pager_with_tabs.xml
+++ b/lib/src/main/res/layout/pager_with_tabs.xml
@@ -8,37 +8,39 @@
 			 android:layout_width="match_parent"
 			 android:layout_height="match_parent">
 
-		<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:orientation="vertical">
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:orientation="vertical">
 
 			<FrameLayout
-					android:id="@android:id/tabcontent"
-					android:layout_width="match_parent"
-					android:layout_height="0dp"
-					android:layout_weight="1"
-					android:visibility="gone"/>
+				android:id="@android:id/tabcontent"
+				android:layout_above="@android:id/tabs"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:visibility="gone" />
 
-			<io.chgocn.plug.view.ViewPager
-					android:id="@id/vp_pages"
-					android:layout_width="match_parent"
-					android:layout_height="0dp"
-					android:layout_weight="1"/>
+			<com.chgocn.lib.view.ViewPager
+				android:id="@id/vp_pages"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_above="@android:id/tabs"/>
 
-			<!--<View-->
-					<!--android:layout_width="match_parent"-->
-					<!--android:layout_height="1dp"-->
-					<!--android:background="@color/tab_bg_top"/>-->
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="5dp"
+				android:src="@drawable/shadow"
+				android:layout_above="@android:id/tabs"/>
 
 			<TabWidget
-					android:id="@android:id/tabs"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:dividerPadding="0dp"
-					android:showDividers="none" />
+				android:id="@android:id/tabs"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_alignParentBottom="true"
+				android:dividerPadding="0dp"
+				android:showDividers="none" />
 
-		</LinearLayout>
+		</RelativeLayout>
 
 	</TabHost>
 
