--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/RootView">
 
     <include layout="@layout/toolbar" />
@@ -7,7 +7,8 @@
     <TabHost
         android:id="@android:id/tabhost"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -16,22 +17,27 @@
 
             <FrameLayout
                 android:id="@android:id/tabcontent"
-                android:layout_above="@android:id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_above="@android:id/tabs"
                 android:visibility="gone" />
 
             <com.chgocn.lib.view.ViewPager
                 android:id="@id/vp_pages"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@android:id/tabs"/>
+                android:layout_above="@android:id/tabs" />
+
+            <!--<ImageView
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:src="@drawable/shadow" />-->
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
-                android:src="@drawable/shadow"
-                android:layout_above="@android:id/tabs"/>
+                android:layout_above="@android:id/tabs"
+                android:src="@drawable/shadow" />
 
             <TabWidget
                 android:id="@android:id/tabs"
@@ -45,4 +51,4 @@
 
     </TabHost>
 
-</LinearLayout>
+</RelativeLayout>
