--- a/lib/src/main/res/layout/pager_with_tabs.xml
+++ b/lib/src/main/res/layout/pager_with_tabs.xml
@@ -1,47 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  style="@style/RootView">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/RootView">
 
-	<include layout="@layout/toolbar"/>
+    <include layout="@layout/toolbar" />
 
-	<TabHost android:id="@android:id/tabhost"
-			 android:layout_width="match_parent"
-			 android:layout_height="match_parent">
+    <TabHost
+        android:id="@android:id/tabhost"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar">
 
-		<RelativeLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-			<FrameLayout
-				android:id="@android:id/tabcontent"
-				android:layout_above="@android:id/tabs"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:visibility="gone" />
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@android:id/tabs"
+                android:visibility="gone" />
 
-			<com.chgocn.lib.view.ViewPager
-				android:id="@id/vp_pages"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_above="@android:id/tabs"/>
+            <com.chgocn.lib.view.ViewPager
+                android:id="@id/vp_pages"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@android:id/tabs" />
 
-			<ImageView
-				android:layout_width="match_parent"
-				android:layout_height="5dp"
-				android:src="@drawable/shadow"
-				android:layout_above="@android:id/tabs"/>
+            <!--<ImageView
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:src="@drawable/shadow" />-->
 
-			<TabWidget
-				android:id="@android:id/tabs"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_alignParentBottom="true"
-				android:dividerPadding="0dp"
-				android:showDividers="none" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:layout_above="@android:id/tabs"
+                android:src="@drawable/shadow" />
 
-		</RelativeLayout>
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:dividerPadding="0dp"
+                android:showDividers="none" />
 
-	</TabHost>
+        </RelativeLayout>
 
-</LinearLayout>
+    </TabHost>
+
+</RelativeLayout>
