--- a/lib/src/main/res/layout/toolbar.xml
+++ b/lib/src/main/res/layout/toolbar.xml
@@ -7,7 +7,8 @@
 	android:minHeight="?attr/actionBarSize"
 	android:background="?attr/colorPrimary"
 	app:popupTheme="@style/ActionBar_Pop_Theme"
-	android:theme="@style/AppTheme.ActionBar">
+	android:theme="@style/AppTheme.ActionBar"
+	app:layout_collapseMode="pin">
 
 	<TextView
 			android:id="@id/toolbar_title"
@@ -25,5 +26,6 @@
 			<!--android:layout_height="wrap_content"-->
 			<!--android:visibility="gone"-->
 			<!--android:layout_gravity="center"/>-->
+
 
 </android.support.v7.widget.Toolbar>
