--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -11,29 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
         <ImageView
             android:id="@+id/banner"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@mipmap/ic_launcher"/>
-
-        <android.support.v7.widget.Toolbar
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.ActionBar"
-            android:layout_alignParentTop="true"
-            android:minHeight="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:id="@+id/toolbar" />
-        </android.support.design.widget.CollapsingToolbarLayout>
+            android:src="@mipmap/ic_launcher"
+            app:layout_scrollFlags="scroll|enterAlways"/>
+
+        <include layout="@layout/toolbar"/>
 
         <android.support.design.widget.TabLayout
             android:layout_below="@id/toolbar"
